# DBCHelper

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp  submodules.init.txt
cmake/: 3rdparty.cmake  ctools.cmake  dbcppp.cmake  freetype.cmake  glfw.cmake  imgui.cmake  imguifiledialog.cmake
res/: MSVCInfo.rc
src/Gui/: CustomImGuiFileDialogConfig.h  ImWidgets.cpp  ImWidgets.h  MainFrame.cpp  MainFrame.h
src/Headers/: Build.h  Globals.h
src/Helper/: ThemeHelper.cpp  ThemeHelper.h  TranslationHelper.cpp  TranslationHelper.h
src/Modules/CStruct/: CStructModel.cpp  CStructModel.h  CStructView.cpp  CStructView.h
src/Modules/Dbc/: DBCExporter.cpp  DBCExporter.h  DBCFile.cpp  DBCFile.h  DBCModel.cpp  DBCModel.h  DBCView.cpp  DBCView.h
src/Modules/Dbc/DBCObjects/: DBCErrors.cpp  DBCErrors.h  DBCGranularErrors.cpp  DBCGranularErrors.h  DBCMessage.cpp  DBCMessage.h  DBCNetwork.cpp  DBCNetwork.h  DBCNode.cpp  DBCNode.h  DBCObject.cpp  DBCObject.h  DBCSignal.cpp  DBCSignal.h
src/Modules/Matlab/: MatlabModel.cpp  MatlabModel.h  MatlabView.cpp  MatlabView.h
src/Panes/: CStructsPane.cpp  CStructsPane.h  DBCTreePane.cpp  DBCTreePane.h  DBCViewPane.cpp  DBCViewPane.h  DebugPane.cpp  DebugPane.h  ErrorsPane.cpp  ErrorsPane.h  HelpPane.cpp  HelpPane.h  MatlabPane.cpp  MatlabPane.h  SynthesisPane.cpp  SynthesisPane.h
src/Panes/Manager/: LayoutManager.cpp  LayoutManager.h
src/Res/: CustomFont.cpp  CustomFont.h  CustomFont2.cpp  CustomFont2.h  CustomFonts.ifs
